# core-fraud-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PRINCIPAL_ENGINEER_REVIEW.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 29b8e9126b57_initial_schema.py  a1b2c3d4e5f6_add_users_table.py  b2c3d4e5f6a7_drop_users_table.py  c3d4e5f6a7b8_add_system_config.py  d4e5f6a7b8c9_add_human_readable_ids.py  e5f6a7b8c9d0_add_account_id_to_transactions.py  f3a8b2c4d5e6_add_decision_tier_columns.py
app/: __init__.py  config.py  constants.py  dependencies.py  infrastructure.py  main.py  middleware.py  providers.py  rate_limit.py  telemetry.py
app/adapters/: __init__.py  pylitmus_adapter.py
app/api/: health.py
app/api/v1/: alerts.py  auth.py  config.py  health.py  router.py  rules.py
app/api/v1/endpoints/: __init__.py  alerts.py  config.py  rules.py
app/auth/: __init__.py  dependencies.py  security.py  token_revocation.py
app/consumers/: __init__.py  base.py  idempotency.py  main.py  transaction_consumer.py
app/core/: __init__.py  alert_state.py  evaluation_service.py  feature_service.py  fraud_detector.py
app/filters/: __init__.py  alert.py  base.py  rule.py
app/grpc/: server.py
app/models/: __init__.py  alert.py  base.py  config.py  notification.py  rule.py  transaction.py  user.py
app/repositories/: __init__.py  alert_repository.py  config_repository.py  protocols.py  rule_repository.py  transaction_repository.py
app/schemas/: __init__.py  alert.py  auth.py  config.py  rule.py  transaction.py
app/services/: __init__.py  alert_service.py  config_service.py  rule_service.py
app/tasks/: __init__.py  celery_app.py  features.py  maintenance.py  notifications.py
app/utils/: audit.py  logging.py
proto/sentinel/fraud/v1/: fraud_evaluation.proto
rules/: default_rules.yaml
scripts/: benchmark_kafka.py  generate_proto.sh  generate_transactions.py  seed_rules.py
tests/: conftest.py
tests/benchmark/: test_evaluation_throughput.py
tests/contract/: test_jwt_contract.py
tests/helpers/: token_factory.py
tests/integration/: test_auth_api.py  test_db_integration.py  test_http_api.py  test_kafka_consumer.py
tests/unit/: test_consumer.py  test_dependencies.py  test_evaluation_service.py  test_feature_service.py  test_filters.py  test_fraud_detector.py  test_grpc_servicer.py  test_idempotency.py  test_models.py  test_schemas.py  test_security.py
